# ncu-example

./: CMakeLists.txt
Common/: helper_functions.h
Samples/: CMakeLists.txt
Samples/Convolution/: CMakeLists.txt  kernels.cuh  main.cu
Samples/Histogram/: CMakeLists.txt  kernels.cuh  main.cu
Samples/MatrixTranspose/: CMakeLists.txt  kernels.cuh  main.cu
Samples/Reduction/: CMakeLists.txt  kernels.cuh  main.cu
Samples/Stencil/: CMakeLists.txt  kernels.cuh  main.cu
Samples/VectorAdd/: CMakeLists.txt  main.cu
